; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video.c_set_render_size.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video.c_set_render_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GS_NEITHER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i64)* @set_render_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_render_size(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = call i32 @gs_enable_depth_test(i32 0)
  %6 = load i32, i32* @GS_NEITHER, align 4
  %7 = call i32 @gs_set_cull_mode(i32 %6)
  %8 = load i64, i64* %3, align 8
  %9 = sitofp i64 %8 to float
  %10 = load i64, i64* %4, align 8
  %11 = sitofp i64 %10 to float
  %12 = call i32 @gs_ortho(float 0.000000e+00, float %9, float 0.000000e+00, float %11, float -1.000000e+02, float 1.000000e+02)
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @gs_set_viewport(i32 0, i32 0, i64 %13, i64 %14)
  ret void
}

declare dso_local i32 @gs_enable_depth_test(i32) #1

declare dso_local i32 @gs_set_cull_mode(i32) #1

declare dso_local i32 @gs_ortho(float, float, float, float, float, float) #1

declare dso_local i32 @gs_set_viewport(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
